	PR c++/54922 	* semantics.c (build_anon_member_initialization): New. 	(build_data_member_initialization): Use it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@196070 138bc75d-0d04-0410-961f-82ee72b054a4